--- a/views.html
+++ b/views.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="image11">
-          <img src="images/view-gallery/duomo.jpg" alt="Duomo day" id="image-views">
+          <img src="images/view-gallery/duomo.jpg" alt="Views of Florence" id="image-views">
           <div class="overlay">
             <div class="text-block">Florence from the Ponte Vecchio to the Duomo</div>
           </div>
