--- a/about.html
+++ b/about.html
@@ -7,13 +7,13 @@
     <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
     <title>About</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=213615691"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160747982-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', '213615691');
+      gtag('config', 'UA-160747982-1');
     </script>
   </head>
   <body>
