--- a/views.html
+++ b/views.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" type= "text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
     <title>Views</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160747982-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-160747982-1');
+    </script>
   </head>
   <body>
     <a class = "skip" href="#skip">Jump to Content</a>
