--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type= "text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
-    <title>About</title>
+    <title>About Me</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160747982-1"></script>
     <script>
@@ -22,7 +22,7 @@
       <img src="images/logo.png" alt="airplane logo" id = "plane">
       <nav class="nav-list">
         <a class="nav-item" href="home.html">Home</a>
-        <a class="nav-item current" href="about.html">About</a>
+        <a class="nav-item current" href="about.html">About Me</a>
         <a class="nav-item" href="views.html">Views</a>
         <a class="nav-item" href="cuisine.html">Cuisine</a>
         <a class="nav-item" href="contact.html">Contact</a>
@@ -41,7 +41,7 @@
       <div class="flip-section">
         <h2>Learn More About Sofia</h2>
         <div class="flip-cards">
-          <div class="flip-card">
+          <div class="flip-card" tabindex="0">
             <div class="flip-card-inner">
               <div class="flip-card-front">
                 <h3>Background</h3>
@@ -51,7 +51,7 @@
               </div>
             </div>
           </div>
-          <div class="flip-card">
+          <div class="flip-card" tabindex="0">
             <div class="flip-card-inner">
               <div class="flip-card-front">
                 <h3>Education</h3>
@@ -61,7 +61,7 @@
               </div>
             </div>
           </div>
-          <div class="flip-card">
+          <div class="flip-card" tabindex="0">
             <div class="flip-card-inner">
               <div class="flip-card-front">
                 <h3>Interests</h3>
