--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
       <img src="images/logo.png" alt="airplane logo" id = "plane">
       <nav class="nav-list" id="to-top">
         <a class="nav-item current" href="home.html">Home</a>
-        <a class="nav-item" href="about.html">About</a>
+        <a class="nav-item" href="about.html">About Me</a>
         <a class="nav-item" href="views.html">Views</a>
         <a class="nav-item" href="cuisine.html">Cuisine</a>
         <a class="nav-item" href="contact.html">Contact</a>
@@ -33,7 +33,6 @@
         <h1 class="home-text">Experience Florence, Italy</h1>
         <p class="home-text">Last year, I had the incredible experience of studying abroad in Florence, Italy. I want to share some of the best food, views, and cultural sites that I enjoyed during my adventures abroad. From authentic cuisine to spectacular views, one cannot go wrong with a visit to Florence. Come learn about the city from the immersive perspective of a study abroad experience.
         </p>
-        <button class="button"><a href="https://www.google.com/flights" target="_blank" class="button-text">Find Flights</a></button>
       </div>
       <div class="container">
         <div class="image1">
