--- a/views.html
+++ b/views.html
@@ -22,7 +22,7 @@
       <img src="images/logo.png" alt="airplane logo" id = "plane">
       <nav class="nav-list" id="to-top">
         <a class="nav-item" href="home.html">Home</a>
-        <a class="nav-item" href="about.html">About</a>
+        <a class="nav-item" href="about.html">About Me</a>
         <a class="nav-item current" href="views.html">Views</a>
         <a class="nav-item" href="cuisine.html">Cuisine</a>
         <a class="nav-item" href="contact.html">Contact</a>
